--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       POSTGRES_PASSWORD: password
     volumes:
       - postgres_data:/var/lib/postgresql/data
-      - ./Postgres_SQL/init.sql:/docker-entrypoint-initdb.d/init.sql
+      - ./PostgreSQL/init.sql:/docker-entrypoint-initdb.d/init.sql
 
   scrapy:
     build:
