--- a/Flask/Dockerfile
+++ b/Flask/Dockerfile
@@ -1,21 +1,19 @@
 FROM python:3.10
 
-# Set working directory
 WORKDIR /app
 
-# Copy requirements.txt and install
+# Copier et installer les dépendances
 COPY ./Flask/requirements.txt /app/
 RUN pip install -r requirements.txt
 
-# Copy Scrapy project
+# Copier le code de l'application Flask et les assets statiques
 COPY ./Flask /app
 
-# Expose port 8080
 EXPOSE 8080
 
-# Set vars
+# Variable d'environnement
 ENV FLASK_APP=app.py
 ENV FLASK_RUN_HOST=0.0.0.0
 
-# Run Flask App
+# Démarre l'application Flask
 CMD ["flask", "run", "--host=0.0.0.0", "--port=8080"]
